# mx-sdk-rs-0.34.0-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  publish.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/dct-transfer-with-fee/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml
contracts/examples/empty/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/lottery-dct/: Cargo.toml
contracts/examples/moax-dct-swap/: Cargo.toml
contracts/examples/moax-dct-swap/denali/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/examples/moax-dct-swap/meta/: Cargo.toml
contracts/examples/moax-dct-swap/meta/src/: main.rs
contracts/examples/moax-dct-swap/src/: swap.rs
contracts/examples/moax-dct-swap/tests/: moax_dct_swap_denali_rs_test.rs
contracts/examples/moax-dct-swap/wasm/: Cargo.toml
contracts/examples/moax-dct-swap/wasm/src/: lib.rs
contracts/feature-tests/composability/dct-contract-pair/first-contract/meta/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/meta/: Cargo.toml
denali/: Cargo.toml
dharitri-codec/: Cargo.toml
dharitri-codec-derive/: Cargo.toml
dharitri-interact-snippets/: Cargo.toml
dharitri-interact-snippets/src/: interactor_result.rs  interactor_vm_query.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/tests/: managed_vec_test.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-modules/: Cargo.toml
dharitri-wasm-modules/src/: lib.rs  pause.rs
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs
dharitri-wasm/src/api/: builtin_function_names.rs
dharitri-wasm/src/contract_base/wrappers/: send_wrapper.rs
dharitri-wasm/src/storage/mappers/: single_value_mapper.rs
dharitri-wasm/src/types/interaction/: contract_call.rs
dharitri-wasm/src/types/managed/basic/: big_float.rs  big_int.rs  big_uint.rs
dharitri-wasm/src/types/managed/multi_value/: multi_value_managed_vec.rs  multi_value_managed_vec_counted.rs
dharitri-wasm/src/types/managed/wrapped/: managed_vec.rs
tools/erdpy-snippet-generator/: Cargo.toml
(+450 files in other folders)
