[package]
name = "moax-dct-swap"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "src/swap.rs"

[dependencies.dharitri-wasm]
version = "0.5.2"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-modules]
version = "0.5.2"
path = "../../../dharitri-wasm-modules"

[dev-dependencies.dharitri-wasm-debug]
version = "0.5.2"
path = "../../../dharitri-wasm-debug"
