[package]
name = "first-contract-meta"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.first-contract]
path = ".."

[dependencies.dharitri-wasm]
version = "0.5.2"
path = "../../../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.5.2"
path = "../../../../../../dharitri-wasm-debug"
